# RollBot

./: .env.example  docker-compose.yaml  pyproject.toml
bot/: loader.py  main.py
bot/handlers/: html_echo.py  registration.py  roll.py  routing.py  start.py
bot/models/: __init__.py
bot/orm/: roll.py
bot/states/: telegram_user.py
bot/utils/: message.py
web/admin/: mixins.py
web/apps/bot_settings/: admin.py  apps.py  models.py
web/apps/bot_settings/migrations/: 0001_initial.py
web/apps/rolls/: admin.py  apps.py  models.py
web/apps/rolls/migrations/: 0001_initial.py  0002_remove_roll_telegram_id_remove_roll_username.py  0003_alter_roll_options.py  0004_alter_roll_text.py
web/apps/telegram_users/: admin.py  apps.py  models.py  service.py  urls.py  views.py
web/apps/telegram_users/migrations/: 0001_initial.py  0002_telegramuser_date_birth.py  0003_remove_telegramuser_email.py
web/apps/telegram_users/templates/admin/telegram_users/telegramuser/: change_list.html
web/core/: settings.py  urls.py
web/db/: model_mixins.py
